--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ package-lock.json
 # The Token
 token.js
 
-# Starboard
+# Files created by bot
 starboard
+confession_counter
 
 # Role Assignment script (as it contains sensitive Discord IDs)
 role-assign.js
