--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ token.txt
 
 # Files created by bot
 starboard
-confession_counter
+confession_counter_*
 
 # Role Assignment script (as it contains sensitive Discord IDs)
 role-assign.js
