--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "got": "^11.8.2",
+    "js-sha256": "^0.9.0",
     "shamirs-secret-sharing": "^1.0.1",
     "shuffle-array": "^1.0.1"
   }
