--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Discord bot for the MIT 2025 server.",
   "main": "bot.js",
   "scripts": {
+    "compile": "npx tsc",
     "start": "node bot.js"
   },
   "repository": {
@@ -20,7 +21,12 @@
     "discord.js": "^12.5.3",
     "got": "^11.8.2",
     "js-sha256": "^0.9.0",
-    "shamirs-secret-sharing": "^1.0.1",
+    "shamirs-secret-sharing-ts": "^1.0.2",
     "shuffle-array": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/got": "^9.6.12",
+    "@types/node": "^17.0.26",
+    "@types/shuffle-array": "^1.0.2"
   }
 }
